# demo_crewai

./: README.md
demo_crew/: README.md  pyproject.toml
demo_crew/src/demo_crew/: main.py
demo_crew/src/demo_crew/crews/content_crew/: content_crew.py
demo_crew/src/demo_crew/crews/content_crew/config/: agents.yaml  tasks.yaml
support_demo/: README.md  pyproject.toml
support_demo/src/support_demo/: main.py
support_demo/src/support_demo/crews/content_crew/: content_crew.py
support_demo/src/support_demo/crews/content_crew/config/: agents.yaml  tasks.yaml
