[project]
name = "demo_crew"
version = "0.1.0"
description = "demo_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=1.15.2,<2.0.0"
]

[project.scripts]
kickoff = "demo_crew.main:kickoff"
run_crew = "demo_crew.main:kickoff"
plot = "demo_crew.main:plot"
run_with_trigger = "demo_crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
