[project]
name = "support_demo"
version = "0.1.0"
description = "support_demo using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]>=1.15.2,<2.0.0",
    "requests>=2.34.2",
]

[project.scripts]
kickoff = "support_demo.main:kickoff"
run_crew = "support_demo.main:kickoff"
plot = "support_demo.main:plot"
run_with_trigger = "support_demo.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
